--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-polyfill": "6.8.0",
-    "bootstrap": "3.3.6",
+    "bootstrap": "^3.3.6",
     "jquery": "2.2.3",
+    "lodash": "^4.17.4",
     "react": "15.0.2",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "4.0.4",
     "redux": "3.5.2",
     "redux-thunk": "2.0.1",
